JCRVLT-149 PermSize deprecation warning for java 1.8
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/commons/filevault/trunk@1775237 13f79535-47bb-0310-9956-ffa450edef68